<resources>
    <string name="app_name">SocialBook</string>
    <string name="social_book">Social Book</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="chat_box">Chat Box</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="developer_info">Developer Info</string>
    <string name="profile">Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="_0">0</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
</resources>