<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/GroupBottomNavigationOne"
        android:checkableBehavior="single">

        <item
            android:title="@string/home"
            android:id="@+id/BottomMenuHome"
            android:icon="@drawable/ic_baseline_home_24"
            >

        </item>
        <item
            android:title="@string/chat_box"
            android:id="@+id/BottomMenuChat"
            android:icon="@drawable/ic_baseline_chat_24"
            >

        </item>
        <item
            android:title="@string/profile"
            android:id="@+id/BottomMenuProfile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            >

        </item>


    </group>


</menu>