<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ITLuserName"

                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:hint="@string/user_name"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ITLemail"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"

                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"

                android:hint="@string/email"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="491dp"
            android:layout_marginEnd="25dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ITLPassword"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="143dp"
            android:layout_marginTop="585dp"
            android:layout_marginEnd="143dp"
            android:background="@drawable/bg_button"
            android:text="@string/sign_up"
            android:textColor="#F8FBFB" />


    </RelativeLayout>

</FrameLayout>