<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="346dp"
            android:layout_marginEnd="25dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ITLemailLogin"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"

                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"

                android:hint="@string/email"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="25dp"
            app:passwordToggleEnabled="true"

            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ITLPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="143dp"
            android:layout_marginTop="554dp"
            android:layout_marginEnd="143dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="#F8FBFB" />

    </RelativeLayout>


</FrameLayout>